--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,5 @@ spring:
     h2:
         console:
             enabled: true
+    datasource:
+        url: jdbc:h2:file:~/workspace/vdf_spring/h2;DB_CLOSE_ON_EXIT=FALSE
