--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,6 @@ spring:
             enabled: true
     datasource:
         url: jdbc:h2:file:~/workspace/vdf_spring/h2;DB_CLOSE_ON_EXIT=FALSE
+    jpa:
+        hibernate:
+          ddl-auto: update
