--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,16 @@ spring:
     jpa:
         hibernate:
           ddl-auto: update
+
+security:
+  oauth2:
+    client:
+      clientId: 214006909435830
+      clientSecret: e84e502361d0742ebdc693133dafc2ee
+      accessTokenUri: https://graph.facebook.com/oauth/access_token
+      userAuthorizationUri: https://www.facebook.com/dialog/oauth
+      tokenName: oauth_token
+      authenticationScheme: query
+      clientAuthenticationScheme: form
+    resource:
+      userInfoUri: https://graph.facebook.com/me
