--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,15 +8,14 @@ spring:
         hibernate:
           ddl-auto: update
 
-security:
-  oauth2:
-    client:
-      clientId: 214006909435830
-      clientSecret: e84e502361d0742ebdc693133dafc2ee
-      accessTokenUri: https://graph.facebook.com/oauth/access_token
-      userAuthorizationUri: https://www.facebook.com/dialog/oauth
-      tokenName: oauth_token
-      authenticationScheme: query
-      clientAuthenticationScheme: form
-    resource:
-      userInfoUri: https://graph.facebook.com/me
+facebook:
+  client:
+    clientId: 214006909435830
+    clientSecret: e84e502361d0742ebdc693133dafc2ee
+    accessTokenUri: https://graph.facebook.com/oauth/access_token
+    userAuthorizationUri: https://www.facebook.com/dialog/oauth
+    tokenName: oauth_token
+    authenticationScheme: query
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://graph.facebook.com/me
