--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,12 @@ repositories {
 
 dependencies {
 	compile('com.h2database:h2')
-    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-autoconfigure')
+    compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.social:spring-social-facebook:2.0.3.RELEASE')
+    compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.social:spring-social-security:1.1.6.RELEASE')
-    compile('org.springframework.social:spring-social-config:1.1.6.RELEASE')
+    compile('org.springframework.boot:spring-boot-starter-social-facebook:1.5.15.RELEASE')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
 	compileOnly 'org.projectlombok:lombok:1.18.0'
