--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ app:
     # redirectUri mentioned by the frontend client in the /oauth2/authorize request.
     # We're not using cookies because they won't work well in mobile clients.
     authorizedRedirectUris:
+    - https://api.varfdeforma.ro/signed-in
     - http://localhost:3000/signed-in
-    - myandroidapp://oauth2/redirect
-    - myiosapp://oauth2/redirect
+    # - myandroidapp://oauth2/redirect
+    # - myiosapp://oauth2/redirect
