--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,34 @@
-buildscript {
-	ext {
-		springBootVersion = '2.1.7.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
-}
-
 plugins {
 	id 'net.ltgt.apt' version '0.10'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id "com.bmuschko.docker-spring-boot-application" version "6.1.3"
+    id "org.springframework.boot" version "2.2.5.RELEASE"
+    id 'java'
 }
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ggrec'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "Hoxton.SR1")
+}
+
+docker {
+    springBootApplication {
+        baseImage = 'adoptopenjdk/openjdk11:jdk-11.0.4_11-alpine-slim'
+        ports = [8090]
+        images = ['georgian/vdf-backend']
+    }
+}
 
 dependencies {
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.618'
     compile('mysql:mysql-connector-java')
     compile('com.h2database:h2')
